--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,26 +1,23 @@
-.filters{
-    display: flex;
-    align-items: center;
-    background-color: white;
+.container .filters {
+    position: relative;
+    background: white;
     height: 70px;
     width: 100%;
-    border: solid 1px #DDDDDD;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
-    position: relative;
-    resize: vertical;
 }
-button{
+button {
     position: absolute;
-    right: 30px;
     font-size: 18px;
-    background-color: #ff5a5f;
-    color: #ffffff;
+    background: #FF5A5F;
+    color: #FFFFFF;
     height: 48px;
     width: 20%;
-    border: 0;
+    border-style: none;
     border-radius: 4px;
-    cursor: pointer;
+    top: 15%;
+    right: 30px;
 }
-button:hover{
-    opacity: .9;
+button:hover {
+    opacity: 0.9;
 }
