--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,49 +1,43 @@
-.filters{
-    display: flex;
-    align-items: center;
-    background-color: white;
+.container .filters {
+    position: relative;
+    background: white;
     height: 70px;
     width: 100%;
-    border: solid 1px #DDDDDD;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
-    position: relative;
-    resize: vertical;
 }
-button{
+button {
     position: absolute;
-    right: 30px;
     font-size: 18px;
-    background-color: #ff5a5f;
-    color: #ffffff;
+    background: #FF5A5F;
+    color: #FFFFFF;
     height: 48px;
     width: 20%;
-    border: 0;
+    border-style: none;
     border-radius: 4px;
-    cursor: pointer;
+    top: 15%;
+    right: 30px;
 }
-button:hover{
-    opacity: .9;
+button:hover {
+    opacity: 0.9;
 }
-.locations{
+.filters div {
+    display: inline-block;
+    position: relative;
     height: 100%;
     width: 25%;
-    border-right: 1px #dddddd solid;
 }
-.amenities{
-    height: 100%;
-    width: 25%;
-}
-h3{
+.filters h3 {
+    margin-left: 15%;
+    margin-bottom: 0;
     font-weight: 600;
-    margin-top: 10px;
 }
-h4{
+.filters h4 {
+    margin-left: 15%;
+    margin-top: 0;
     font-weight: 400;
     font-size: 14px;
-    margin-top: -12px;
 }
-
-.filters div h4,
-.filters div h3{
-    margin-left: 35px;
+.locations {
+    border-right: 1px solid #DDDDDD;
 }
