--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,25 +1,24 @@
 .places {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    flex-flow: row wrap;
+    align-items: center;
+    padding: 0 20px;
 }
-
-h1 {
-    font-size: 30px;
+.places h1 {
     width: 100%;
-    margin-bottom: 0px;
-    padding-left: 20px;
+    text-align: left;
+    font-size: 30px;
 }
-
-article {
+.places article {
     width: 390px;
     padding: 20px;
     margin: 20px;
     border: 1px solid #FF5A5F;
     border-radius: 4px;
 }
-
-article h2 {
-    font-size: 30px;
-    text-align: center;
+.places h2 {
+	font-size: 30px;
+	text-align: center;
+	margin-top: 0;
 }
