--- a/web_flask/static/styles/3-footer.css
+++ b/web_flask/static/styles/3-footer.css
@@ -1,13 +1,16 @@
-footer{
+footer {
     position: fixed;
-    background-color: white;
-    height: 60px; 
+    background: white;
+    height: 60px;
     width: 100%;
+    bottom: 0;
     border-top: 1px solid #CCCCCC;
-    bottom: 0px;
 }
-
-.text {
+footer p {
+    position: absolute;
     text-align: center;
-    padding: 8px;
+    top: 10%;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
