--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -1,85 +1,77 @@
-.filters{
-    display: flex;
-    align-items: center;
-    background-color: white;
+.container .filters {
+    position: relative;
+    background: white;
     height: 70px;
     width: 100%;
-    border: solid 1px #DDDDDD;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
-    position: relative;
-    resize: vertical;
 }
-button{
+button {
     position: absolute;
-    right: 30px;
     font-size: 18px;
-    background-color: #ff5a5f;
-    color: #ffffff;
+    background: #FF5A5F;
+    color: #FFFFFF;
     height: 48px;
     width: 20%;
-    border: 0;
+    border-style: none;
     border-radius: 4px;
-    cursor: pointer;
+    top: 15%;
+    right: 30px;
 }
-button:hover{
-    opacity: .9;
+button:hover {
+    opacity: 0.9;
+}
+.filters div {
+    display: inline-grid;
+}
+.filters h2 {
+    margin-top: 0;
+    margin-bottom: 5px;
+    font-weight: 600;
+}
+.filters h3 {
+    margin-left: 15%;
+    margin-bottom: 0;
+    font-weight: 600;
+}
+.filters h4 {
+    margin-left: 15%;
+    margin-top: 0;
+    font-weight: 400;
+    font-size: 14px;
 }
 .locations {
     height: 100%;
     width: 25%;
-    border-right: 1px #dddddd solid;
+    border-right: 1px solid #DDDDDD;
 }
-
-.amenities{
+.amenities {
     height: 100%;
     width: 25%;
 }
-h3{
-    font-weight: 600;
-    margin-top: 10px;
-}
-h4{
-    font-weight: 400;
-    font-size: 14px;
-    margin-top: -12px;
-}
-.filters div h4,
-.filters div h3{
-    margin-left: 35px;
-}
-
-.popover{
-    display:none;
-    position: absolute;
-    top: 56px;
-    padding-top: 5px;
-    padding-left: 19px;
-    background-color: #FAFAFA;
-    border: 1px #dddddd solid;
+.popover {
+    visibility: hidden;
+    width: 100%;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
-    width: 23%;
-    z-index: 100;
-}
-
-li{
-    list-style: none;
-    margin-bottom: 5px;
-    margin-top: 3px;
-    padding-left: 10px;
-    line-height: 23px;
-}
-
-h2{
-    font-size: 16px;
-    margin: 0;
-    margin-top: 15px;
-    margin-bottom: 5px;
-    margin-left: -15px;
-    padding: 0;
-}
-
-div:hover > .popover{
-    display: block;
+    background: #FAFAFA;
+    padding-bottom: 25px;
     overflow-y: scroll;
     max-height: 300px;
+    height: fit-content;
+}
+.amenities .popover {
+    margin-left: -5px;
+}
+
+.popover ul {
+    list-style-type: none;
+}
+
+.popover li {
+    margin-bottom: 5px;
+}
+.amenities:hover .popover,
+.locations:hover .popover {
+    visibility: visible;
 }
