--- a/web_flask/templates/100-hbnb.html
+++ b/web_flask/templates/100-hbnb.html
@@ -1,85 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>AirBnB clone</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/4-common.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-header.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-footer.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/6-filters.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/8-places.css')}}">
-    <link rel="icon" href="{{ url_for('static', filename='images/icon.png')}}">
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="static/styles/4-common.css">
+    <link rel="stylesheet" type="text/css" href="static/styles/3-header.css">
+    <link rel="stylesheet" type="text/css" href="static/styles/3-footer.css">
+    <link rel="stylesheet" type="text/css" href="static/styles/6-filters.css">
+    <link type="text/css" rel="stylesheet" href="static/styles/8-places.css">
+    <link rel="icon" href="static/images/icon.png" />
+    <title>HBnB</title>
+  </head>
+  <body>
     <header>
-        <div class="logo"></div>
+      <div class="logo"></div>
     </header>
     <div class="container">
-        <section class="filters">
-            <button>
-                Search
-            </button>
-            <div class="locations">
-                <h3>States</h3>
-                <h4>&nbsp;</h4>
-                <ul class="popover">
-                    {% for k, v in state.items()|sort(attribute="1.name") %}
-					<li><h2>{{ v.name }}:</h2>
-						<UL>
-							{% for citi in v.cities|sort(attribute="name") %}
-								<LI>{{ citi.name }}</LI>
-							{% endfor %}
-						</UL>
-					</li>
-				{% endfor %}
-                </ul>
-            </div>
-            <div class="amenities">
-                <h3>Amenities</h3>
-                <h4>&nbsp;</h4>
-                <ul class="popover">
-                    {% for k, v in ameni.items()|sort(attribute="1.name") %}
-						<li>{{ v.name }}</li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </section>
-        <section class="places">
-            <h1>Places</h1>
-            {% for k, v in place.items()|sort(attribute="1.name") %}
-            <article>
-                <div class="place_tittle"><h2>{{ v.name }}</h2></div>
-                <div class="price_by_night">
-                    <p>${{ v.price_by_night }}</p>
-                </div>
-                <div class="information">
-                    <div class="max_guest">
-                        <div class="logo_guests"></div>
-                        <p>{{ v.max_guest }} Guest</p>
-                    </div>
-                    <div class="number_rooms">
-                        <div class="logo_rooms"></div>
-                        <p>{{ v.number_rooms}} Room</p>
-                    </div>
-                    <div class="number_bathrooms">
-                        <div class="logo_bath"></div>
-                        <p>{{ v.number_bathrooms }} Bathroom</p>
-                    </div>
-                </div>
-                <div class="user">
-                    <p><strong>Owner: </strong>Cristian G</p>
-                </div>
-                <div class="description">
-                    {% autoescape false %}
-                    <p>{{ v.description }}</p>
-                    {% endautoescape %} 
-                </div>
-            </article>
+      <section class="filters">
+    <div class="locations">
+      <h3>States</h3>
+      <h4>&nbsp;</h4>
+      <div class="popover">
+        <ul>
+        {% for state in states|sort(attribute='name') %}
+          <li>
+            <h2>{{ state.name|e }}</h2>
+            <ul>
+            {% for city in state.cities|sort(attribute='name') %}
+              <li>{{ city.name }}</li>
             {% endfor %}
-        </section>
+            </ul>
+          </li>
+        {% endfor %}
+        </ul>
+      </div>
+    </div>
+    <div class="amenities">
+      <h3>Amenities</h3>
+      <h4>&nbsp;</h4>
+      <div class="popover">
+        <ul>
+        {% for amenity in amenities|sort(attribute='name') %}
+          <li>{{ amenity.name }}</li>
+        {% endfor %}
+        </ul>
+      </div>
+    </div>
+    <button type="button">Search</button>
+      </section>
+      <section class="places">
+        <h1>Places</h1>
+        {% autoescape false %}
+        {% for place in places|sort(attribute='name') %}
+          <article>
+            <div class="title_box">
+              <h2>{{ place.name }}</h2>
+              <div class="price_by_night">${{ place.price_by_night}}</div>
+            </div>
+            <div class="information">
+              <div class="max_guest">{{ place.max_guest }} Guests</div>
+              <div class="number_rooms">{{ place.number_rooms }} Bedrooms</div>
+              <div class="number_bathrooms">{{ place.number_bathrooms }} Bathrooms</div>
+            </div>
+            <div class="user">
+              <b>Owner:</b> {{ place.user.first_name }} {{ place.user.last_name }}
+            </div>
+            <div class="description">
+            {{ place.description }}
+            </div>
+        </article>
+        {% endfor %}
+        {% endautoescape %}
+      </section>
     </div>
     <footer>
-        <p class="text">Holberton School</p>
+      <p>Holberton School</p>
     </footer>
-</body>
+  </body>
 </html>
