--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,28 +1,26 @@
-<!DOCTYPE html>
-<HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-        {%- if not id %}
-            <H1>States</H1>
-            <UL>
-                {% for k, v in data.items()|sort(attribute="1.name") %}
-                    <LI>{{ v.id }}: <B>{{ v.name }}</B></LI>
-                {% endfor %}
-            </UL>
-        {%- elif id %}
-            {%- for k, v in data.items() if id in v.id %}
-                    <H1>State: {{ v.name }}</H1>
-                    <H3>Cities:</H3>
-                    <UL>
-                        {% for val in v.cities|sort(attribute="name") %}
-                            <LI>{{ val.id }}: <B>{{ val.name }}</B></LI>
-                        {% endfor %}
-                    </UL>
-                {%- else %}
-                    <H1>Not found!</H1>
-            {%- endfor %}
-        {%- endif %}
-    </BODY>
-</HTML>
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>HBNB</title>
+  </head>
+  <body>
+  {% if id is none %}
+    <h1>States</h1>
+    <ul>
+    {% for state in states|sort(attribute='name') %}
+      <li>{{ state.id|e }}: <b>{{ state.name|e }}</b></li>
+    {% endfor %}
+    </ul>
+  {% elif states is none %}
+    <h1>Not found!</h1>
+  {% else %}
+    <h1>State: {{ states.name }}</h1>
+    <h3>Cities:</h3>
+    <ul>
+    {% for city in states.cities|sort(attribute='name') %}
+        <li>{{ city.id|e }}: <b>{{ city.name|e }}</b></li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+  </body>
+</html>
