--- a/web_flask/static/styles/3-footer.css
+++ b/web_flask/static/styles/3-footer.css
@@ -1,16 +1,13 @@
-footer {
+footer{
     position: fixed;
-    background: white;
-    height: 60px;
+    background-color: white;
+    height: 60px; 
     width: 100%;
-    bottom: 0;
     border-top: 1px solid #CCCCCC;
+    bottom: 0px;
 }
-footer p {
-    position: absolute;
+
+.text {
     text-align: center;
-    top: 10%;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    padding: 8px;
 }
