--- a/web_flask/static/styles/3-header.css
+++ b/web_flask/static/styles/3-header.css
@@ -4,8 +4,10 @@ header {
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
 }
-header .logo {
-    background: url("../images/logo.png") no-repeat;
-    left: 20px;
-    height: 100%;
+
+.logo {
+    height: 60px;
+    width: 160px;
+    background: url(../images/logo.png) no-repeat;
+    background-position: 20px;
 }
