--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -1,53 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="static/styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="static/styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="static/styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="static/styles/6-filters.css">
-    <link rel="icon" href="static/images/icon.png" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/3-footer.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/3-header.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/4-common.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/6-filters.css')}}">
+    <link rel="icon" href="{{ url_for('static', filename='images/icon.png')}}">
     <title>HBnB</title>
-  </head>
-  <body>
+</head>
+<body>
     <header>
-      <div class="logo"></div>
+        <div class="logo"></div>
     </header>
     <div class="container">
-      <section class="filters">
-    <div class="locations">
-      <h3>States</h3>
-      <h4>&nbsp;</h4>
-      <div class="popover">
-        <ul>
-        {% for state in states|sort(attribute='name') %}
-          <li>
-            <h2>{{ state.name|e }}</h2>
-              <ul>
-              {% for city in state.cities|sort(attribute='name') %}
-                <li>{{ city.name }}</li>
-              {% endfor %}
-              </ul>
-          </li>
-        {% endfor %}
-        </ul>
-      </div>
-    </div>
-    <div class="amenities">
-      <h3>Amenities</h3>
-      <h4>&nbsp;</h4>
-      <div class="popover">
-        <ul>
-        {% for amenity in amenities|sort(attribute='name') %}
-          <li>{{ amenity.name }}</li>
-        {% endfor %}
-        </ul>
-      </div>
-    </div>
-    <button type="button">Search</button>
-      </section>
+        <section class="filters">
+            <button>
+                Search
+            </button>
+            <div class="locations">
+                <h3>States</h3>
+				<h4>&nbsp;</h4>
+				<ul class="popover">
+					{% for k, v in data.items()|sort(attribute="1.name") %}
+					<li><h2>{{ v.name }}:</h2>
+						<UL>
+							{% for citi in v.cities|sort(attribute="name") %}
+								<LI>{{ citi.name }}</LI>
+							{% endfor %}
+						</UL>
+					</li>
+				{% endfor %}
+                </ul>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>&nbsp;</h4>
+                <ul class="popover">
+					{% for k, v in data_1.items()|sort(attribute="1.name") %}
+						<li>{{ v.name }}</li>
+					{% endfor %}
+                </ul>
+            </div>
+        </section>
     </div>
     <footer>
-      <p>Holberton School</p>
+        <p class="text">Holberton School</p>
     </footer>
-  </body>
+</body>
 </html>
