--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,20 +1,20 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>HBNB</title>
-  </head>
-  <body>
-    <h1>States</h1>
-    <ul>
-    {% for state in states|sort(attribute='name') %}
-      <li>{{ state.id|e }}: <b>{{ state.name|e }}</b>
-        <ul>
-        {% for city in state.cities|sort(attribute='name') %}
-            <li>{{ city.id|e }}: <b>{{ city.name|e }}</b></li>
-        {% endfor %}
-        </ul>
-      </li>
-    {% endfor %}
-    </ul>
-  </body>
-</html>
+<!DOCTYPE html>
+<HTML lang="en">
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        <H1>States</H1>
+        <UL>
+            {% for k, v in data.items()|sort(attribute="1.name") %}
+                <LI>{{ v.id }}: <B>{{ v.name }}</B>
+                    <UL>
+                        {% for citi in v.cities|sort(attribute="name") %}
+                            <LI>{{ citi.id }}: <B>{{ citi.name }}</B></LI>
+                        {% endfor %}
+                    </UL>
+                </LI>
+            {% endfor %}
+        </UL>
+    </BODY>
+</HTML>
