--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,23 +1,26 @@
-.container .filters {
-    position: relative;
-    background: white;
+.filters{
+    display: flex;
+    align-items: center;
+    background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px solid #DDDDDD;
+    border: solid 1px #DDDDDD;
     border-radius: 4px;
+    position: relative;
+    resize: vertical;
 }
-button {
+button{
     position: absolute;
+    right: 30px;
     font-size: 18px;
-    background: #FF5A5F;
-    color: #FFFFFF;
+    background-color: #ff5a5f;
+    color: #ffffff;
     height: 48px;
     width: 20%;
-    border-style: none;
+    border: 0;
     border-radius: 4px;
-    top: 15%;
-    right: 30px;
+    cursor: pointer;
 }
-button:hover {
-    opacity: 0.9;
+button:hover{
+    opacity: .9;
 }
