--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,43 +1,49 @@
-.container .filters {
-    position: relative;
-    background: white;
+.filters{
+    display: flex;
+    align-items: center;
+    background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px solid #DDDDDD;
+    border: solid 1px #DDDDDD;
     border-radius: 4px;
+    position: relative;
+    resize: vertical;
 }
-button {
+button{
     position: absolute;
+    right: 30px;
     font-size: 18px;
-    background: #FF5A5F;
-    color: #FFFFFF;
+    background-color: #ff5a5f;
+    color: #ffffff;
     height: 48px;
     width: 20%;
-    border-style: none;
+    border: 0;
     border-radius: 4px;
-    top: 15%;
-    right: 30px;
+    cursor: pointer;
 }
-button:hover {
-    opacity: 0.9;
+button:hover{
+    opacity: .9;
 }
-.filters div {
-    display: inline-block;
-    position: relative;
+.locations{
+    height: 100%;
+    width: 25%;
+    border-right: 1px #dddddd solid;
+}
+.amenities{
     height: 100%;
     width: 25%;
 }
-.filters h3 {
-    margin-left: 15%;
-    margin-bottom: 0;
+h3{
     font-weight: 600;
+    margin-top: 10px;
 }
-.filters h4 {
-    margin-left: 15%;
-    margin-top: 0;
+h4{
     font-weight: 400;
     font-size: 14px;
+    margin-top: -12px;
 }
-.locations {
-    border-right: 1px solid #DDDDDD;
+
+.filters div h4,
+.filters div h3{
+    margin-left: 35px;
 }
