--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,24 +1,25 @@
 .places {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    padding: 0 20px;
+    flex-flow: row wrap;
 }
-.places h1 {
-    width: 100%;
-    text-align: left;
+
+h1 {
     font-size: 30px;
+    width: 100%;
+    margin-bottom: 0px;
+    padding-left: 20px;
 }
-.places article {
+
+article {
     width: 390px;
     padding: 20px;
     margin: 20px;
     border: 1px solid #FF5A5F;
     border-radius: 4px;
 }
-.places h2 {
-	font-size: 30px;
-	text-align: center;
-	margin-top: 0;
+
+article h2 {
+    font-size: 30px;
+    text-align: center;
 }
